# lab4

./: .gitignore  pygraph.html  pygraph.py  pyproject.toml  pytest.ini
.github/workflows/: main.yml  upload.yml
tests/: conftest.py  test_manipulation.py  test_metrics.py
