[tool.poetry]
name = "pygraph-xuweiwei"
version = "0.2.0"
description = "Simple Python Graph Library"
authors = []
packages = [
    { include = "pygraph.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
black = "*"
pre-commit = "*"
twine = "*"
pdoc3 = "0.10.0"


